errorlog.txt
09/30 - error from school computer when I tried to use "git pull"
error: Pulling is not possible because you have unmerged files.
hint: Fix them up in the work tree, and then use 'git add/rm <file>'
hint: as appropriate to mark resolution and make a commit.
fatal: Exiting because of an unresolved conflict.

----------------------------------------------------------------------------------------


10/7 - error when did javac *.java on hw 14.
Greet.java:14: error: no suitable constructor found for BigSib(no arguments)
                BigSib joe = new BigSib();
                             ^
    constructor BigSib.BigSib(String) is not applicable
      (actual and formal argument lists differ in length)
    constructor BigSib.BigSib(String,String) is not applicable
      (actual and formal argument lists differ in length)
1 error

error because I deleted the default constructor and instead had 2 overloaded constructors/methods with 1 and 2 args (respectfully).
Error only popped up when created an object of that class without any args
ex. 
That works:

BigSib joe = new BigSib("Word up");

greeting = joe.greet("freshman");
System.out.println(greeting);



This doesn't:

BigSib joe = new BigSib();

greeting = joe.greet("freshman");
System.out.println(greeting);


---------------------------------------------------------------------------

10-14
error when doing hw 18:

BankAccount.java:30: error: non-static method print() cannot be referenced from a static context

tried to print static instance variable from non static method from static main method.

-----------------------------------------------------------------------------------------
